# bot-rust-investo

./: .env.example  Cargo.toml  README.md
src/: brain.rs  lib.rs  main.rs
src/exchange/: cryptocom.rs  mock.rs  mod.rs
