[package]
name = "bot-investo"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }

async-trait = "0.1.89"
rand = "0.8"
create = "0.1.0"
anyhow = "1.0.102"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"